--- a/action.yml
+++ b/action.yml
@@ -14,7 +14,12 @@ inputs:
     description: "PR number"
     required: true
 runs:
+  using: 'composite'
   steps:
+    - name: Checkout code
+        uses: actions/checkout@v2.3.4
+        with:
+          fetch-depth: 0
     - name: Adding Filters
       uses: dorny/paths-filter@v2
       id: filter
