--- a/action.yml
+++ b/action.yml
@@ -27,6 +27,6 @@ runs:
           experimental: '${{ inputs.filename }}-exp.yml'
           validation: '${{ inputs.filename }}-val.yml'
     - run: |
-        ls
-       # ruby lib/run.rb ${{ inputs.before }} ${{ inputs.after }} ${{ inputs.filename }} ${{ inputs.pr_number }} ${{ steps.filter.outputs }}
+        ls ../
+       # ruby ../
       shell: bash
