--- a/action.yml
+++ b/action.yml
@@ -28,7 +28,7 @@ runs:
           validation: '${{ inputs.filename }}-val.yml'
     - run: |
         git clone https://github.com/MyMedsAndMe/compare_cc_action
-        ruby compare_cc_action/link_getter.rb
+        ruby compare_cc_action/link_getter.rb ${{inputs.before}} ${{inputs.after}} ${{inputs.filename}} ${{inputs.pr_number}} ${{steps.filter.outputs}} 
         ls
         ls ../
       shell: bash
